Add SVG logo and create test dashboard HTML
- Added `shugur-logo-full.svg` for branding.
- Created `test-dashboard.html` with a structured layout including:
  - Header with logo and online status.
  - Relay information section with details and copy buttons.
  - Statistics section displaying active connections, processed requests, stored events, and uptime.
  - Supported NIPs section with links to documentation.
  - Relay configuration limitations section.
  - Footer with links to source code, documentation, website, and support.
- Implemented JavaScript for clipboard copying, real-time stats updates, and uptime counter.

--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,6 @@ vaultConfig/
 .cursor/
 
 # Documentation artifacts
-docs/_build/
 site/
 *.pdf
 
@@ -101,5 +100,5 @@ grafana-data/
 prometheus-data/
 websocat
 
-# Website directory (independent repo)
-/website/
+
+design-system
