Add configurable relay public key support
- Add PUBLIC_KEY field to RelayConfig with validation
- Add GetOrCreateRelayIdentityWithConfig function
- Update DefaultRelayMetadata to use configured public key
- Support 64-char hex public key in config with fallback to auto-generation

--- a/internal/config/defaults.yaml
+++ b/internal/config/defaults.yaml
@@ -20,6 +20,7 @@ RELAY:
   NAME: "shugur-relay"           # Relay name (max 30 chars, shown in NIP-11)
   DESCRIPTION: "High-performance, reliable, scalable Nostr relay for decentralized communication." # Relay description (max 200 chars, shown in NIP-11)
   CONTACT: "support@shugur.com"  # Relay contact email (shown in NIP-11)
+  PUBLIC_KEY: ""                 # Relay public key (64-char hex string, leave empty to auto-generate)
   ICON: "https://github.com/Shugur-Network/relay/raw/main/logo.png" # Relay icon URL (shown in NIP-11)
   BANNER: "https://github.com/Shugur-Network/relay/raw/main/banner.png" # Relay banner URL (optional, shown in NIP-11)
   WS_ADDR: ":8080"              # WebSocket listening address
