Add Time Capsules Feature
- Added comprehensive validation for kinds 11990, 31990, 11991
- Integrated validation into relay's event pipeline
- Added required tags and allowed kinds to validator

Time Capsules now validate:
- Vendor tags ["x-cap", "v1"]
- Unlock configuration (threshold mode only)
- Witness lists and threshold consistency
- Timing constraints (future unlock times)
- Unlock share authentication and timing

--- a/internal/config/defaults.yaml
+++ b/internal/config/defaults.yaml
@@ -52,3 +52,7 @@ DATABASE:
   SERVER: "localhost"            # Database server hostname
   PORT: 26257                    # Database port
 
+CAPSULES:
+  ENABLED: true                  # Enable time capsules feature
+  MAX_WITNESSES: 9              # Maximum number of witnesses per capsule
+
