Refactor code structure for improved readability and maintainability

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,7 @@ dashboard/node_modules/
 dashboard/dist/
 dashboard/.netlify/
 dashboard
+docker/compose/docker-compose.local.yml
+
+# Time Capsules Portal (temporary development - will be removed later)
+time-capsules-portal/
