Implement NIP-XX Time Capsules: Add complete Python implementation, test suite, and documentation
- Created `complete_time_capsules_demo.py` for end-to-end demonstration of NIP-XX Time Capsules.
- Added `README.md` detailing directory structure, quick start guide, testing procedures, and development notes.
- Introduced `requirements-test.txt` for Python dependencies required for testing.
- Developed `test_nip_xx_time_capsules.sh` script for automated testing and dependency checks.
- Ensured compliance with NIP-XX specifications, including encryption, decryption, and cross-chain compatibility.

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,14 @@ vaultConfig/
 *~
 .cursor/
 
+# Python virtual environments
+venv/
+env/
+nip_env/
+__pycache__/
+*.pyc
+*.pyo
+
 # Documentation artifacts
 site/
 *.pdf
