Implement NIP-XX Time Capsules Protocol (#2)
* Refactor time capsule implementation to align with NIP-XX specifications

- Removed legacy time capsule event structures and validation logic.
- Introduced new TimeCapsuleCapability and updated relay information document to support NIP-XX.
- Implemented new validation functions for NIP-XX time capsules, including payload structure and tag validation.
- Updated plugin validator to recognize NIP-XX time capsule events and their required tags.
- Removed deprecated endpoints and functions related to the old time capsule system.
- Enhanced error handling and validation for drand-based time-lock encryption.

* Refactor code structure for improved readability and maintainability

* Update uq_addressable index to use jsonb_path_query_first for improved tag handling

* Add comprehensive test suite for NIP-XX Time Capsules with detailed instructions

* Update NIP-33 references to addressable events in documentation and code

* Update changelog for version 1.3.2, detailing Time Capsules protocol redesign, enhanced cryptographic support, new testing infrastructure, and improved validation systems.

* Enhance NIP-XX Time Capsule Test Script with real encryption and dynamic drand configuration

* Implement NIP-XX Time Capsules: Add complete Python implementation, test suite, and documentation

- Created `complete_time_capsules_demo.py` for end-to-end demonstration of NIP-XX Time Capsules.
- Added `README.md` detailing directory structure, quick start guide, testing procedures, and development notes.
- Introduced `requirements-test.txt` for Python dependencies required for testing.
- Developed `test_nip_xx_time_capsules.sh` script for automated testing and dependency checks.
- Ensured compliance with NIP-XX specifications, including encryption, decryption, and cross-chain compatibility.

* Update README files for NIP-XX Time Capsules: Add clarity and structure to test instructions, prerequisites, and development guidelines

* Refactor

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,14 @@ vaultConfig/
 *~
 .cursor/
 
+# Python virtual environments
+venv/
+env/
+nip_env/
+__pycache__/
+*.pyc
+*.pyo
+
 # Documentation artifacts
 site/
 *.pdf
@@ -110,6 +118,3 @@ dashboard/dist/
 dashboard/.netlify/
 dashboard
 docker/compose/docker-compose.local.yml
-
-# Time Capsules Portal (temporary development - will be removed later)
-time-capsules-portal/
