repo: add CODEOWNERS + Dependabot; add CodeQL and Trivy scans; improve CI caching and split PR vs main builds; expose native /metrics endpoint

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+          cache: true
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
@@ -67,25 +68,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-
-      - name: Prepare module cache
-        run: |
-          # Ensure clean state for module cache
-          mkdir -p ~/go/pkg/mod
-          chmod -R u+w ~/go/pkg/mod 2>/dev/null || true
-
-      - name: Cache Go modules
-        uses: actions/cache@v4
-        with:
-          path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
-        continue-on-error: true
-
-      - name: Clean module cache on conflict
-        if: failure()
-        run: go clean -modcache
+          cache: true
 
       - name: Download dependencies
         run: go mod download
@@ -145,9 +128,10 @@ jobs:
           go mod graph | head -n 200 || true
 
   build:
-    name: Build
+    name: Build (main)
     runs-on: ubuntu-latest
     needs: [lint, test]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     strategy:
       matrix:
         goos: [linux, darwin, windows]
@@ -163,6 +147,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+          cache: true
 
       - name: Build binary
         run: |
@@ -242,6 +227,29 @@ jobs:
             COMMIT=${{ github.sha }}
             DATE=${{ github.event.head_commit.timestamp }}
           target: production
+
+  build-pr:
+    name: Build (PR linux/amd64)
+    runs-on: ubuntu-latest
+    needs: [lint, test]
+    if: github.event_name == 'pull_request'
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
+
+      - name: Build binary (linux/amd64)
+        run: |
+          mkdir -p dist
+          VERSION=$(cat VERSION 2>/dev/null || echo "dev")
+          GOOS=linux GOARCH=amd64 go build \
+            -ldflags "-w -s -X main.version=${VERSION} -X main.commit=${{ github.sha }} -X main.date=$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
+            -o dist/relay-linux-amd64 \
+            ./cmd
 
   release:
     name: Release
