ci: skip Docker Build & Push on PRs; run only on push to main

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,6 +177,8 @@ jobs:
     name: Docker Build & Push
     runs-on: ubuntu-latest
     needs: [lint, test, security]
+    # Skip on pull_request; only run for direct pushes (e.g., main) and releases
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: read
       packages: write
