chore: update release-as description to reflect correct version format

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     inputs:
       release-as:
-        description: "Force version (e.g., 1.3.3-rc.1)"
+        description: "Force version (e.g., 1.3.0)"
         required: false
         type: string
 
