chore(release-please): force next version to 1.3.3-rc.1

--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -7,6 +7,7 @@
   "packages": {
     ".": {
       "release-type": "go",
+      "release-as": "1.3.3-rc.1",
       "extra-files": [
         {
           "type": "generic",
@@ -16,4 +17,3 @@
     }
   }
 }
-
