--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -4,11 +4,6 @@ on:
   push:
     branches: [main]
   workflow_dispatch:
-    inputs:
-      release-as:
-        description: "Force version (e.g., 1.3.0)"
-        required: false
-        type: string
 
 permissions:
   contents: write
@@ -18,17 +13,7 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - name: Run release-please (with release-as)
-        if: ${{ github.event_name == 'workflow_dispatch' && inputs.release-as != '' }}
-        uses: googleapis/release-please-action@v4
-        with:
-          token: ${{ secrets.RELEASE_PLEASE_TOKEN || secrets.GITHUB_TOKEN }}
-          config-file: .release-please-config.json
-          manifest-file: .release-please-manifest.json
-          release-as: ${{ inputs.release-as }}
-
-      - name: Run release-please (default)
-        if: ${{ github.event_name != 'workflow_dispatch' || inputs.release-as == '' }}
+      - name: Run release-please
         uses: googleapis/release-please-action@v4
         with:
           token: ${{ secrets.RELEASE_PLEASE_TOKEN || secrets.GITHUB_TOKEN }}
