--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -18,7 +18,8 @@ jobs:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Run Trivy filesystem scan (CRITICAL,HIGH)
-        uses: aquasecurity/trivy-action@6e7b7d1fd3e4fef0c5fa8cce1229c54b9ceecfd3 # v0.24.0
+        uses: aquasecurity/trivy-action@0.33.1
+        # Note: Using version tag instead of SHA due to repository access issues
         with:
           scan-type: fs
           ignore-unfixed: true
