--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -8,16 +8,18 @@ on:
 
 permissions:
   contents: read
+  security-events: write
 
 jobs:
   trivy-fs:
     name: Trivy FS Scan
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
       - name: Run Trivy filesystem scan (CRITICAL,HIGH)
         uses: aquasecurity/trivy-action@0.33.1
+        # Note: Using version tag instead of SHA due to repository access issues
         with:
           scan-type: fs
           ignore-unfixed: true
