Revert "Feat/optimize GitHub workflows (#41)"
This reverts commit ab49794aec9e04d5d85644acef4bc3adf82a9d58.

--- a/.github/ISSUE_TEMPLATE/performance_issue.yml
+++ b/.github/ISSUE_TEMPLATE/performance_issue.yml
@@ -87,6 +87,8 @@ body:
     id: actual-performance
     attributes:
       label: Actual Performance
+    attributes:
+      label: Actual Performance
       description: What performance are you actually seeing?
       placeholder: |
         - Measured response times
