--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -7,6 +7,7 @@
   "packages": {
     ".": {
       "release-type": "go",
+      "release-as": "1.3.3-rc.2",
       "extra-files": [
         {
           "type": "generic",
