--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -511,3 +511,65 @@ jobs:
             -ldflags "-w -s -X main.version=${VERSION} -X main.commit=${{ github.sha }} -X main.date=$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
             -o dist/relay-linux-amd64 \
             ./cmd
+
+  # Build Result Aggregation (inspired by AutoMQ)
+  build-summary:
+    name: Build Summary
+    runs-on: ubuntu-latest
+    needs: [test, build, security-scan, lint]
+    if: always()
+    steps:
+      - name: Check build results
+        run: |
+          echo "## 🏗️ Build Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
+          # Check each job status
+          TEST_STATUS="${{ needs.test.result }}"
+          BUILD_STATUS="${{ needs.build.result }}"
+          SECURITY_STATUS="${{ needs.security-scan.result }}"
+          LINT_STATUS="${{ needs.lint.result }}"
+          
+          echo "| Job | Status | Details |" >> $GITHUB_STEP_SUMMARY
+          echo "|-----|--------|---------|" >> $GITHUB_STEP_SUMMARY
+          
+          # Test results
+          if [[ "$TEST_STATUS" == "success" ]]; then
+            echo "| 🧪 Tests | ✅ Passed | All tests completed successfully |" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "| 🧪 Tests | ❌ Failed | Tests failed or were skipped |" >> $GITHUB_STEP_SUMMARY
+          fi
+          
+          # Build results
+          if [[ "$BUILD_STATUS" == "success" ]]; then
+            echo "| 🏗️ Build | ✅ Passed | Binary compiled successfully |" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "| 🏗️ Build | ❌ Failed | Build compilation failed |" >> $GITHUB_STEP_SUMMARY
+          fi
+          
+          # Security results
+          if [[ "$SECURITY_STATUS" == "success" ]]; then
+            echo "| 🔒 Security | ✅ Passed | No security issues found |" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "| 🔒 Security | ❌ Failed | Security scan found issues |" >> $GITHUB_STEP_SUMMARY
+          fi
+          
+          # Lint results
+          if [[ "$LINT_STATUS" == "success" ]]; then
+            echo "| 📝 Lint | ✅ Passed | Code meets quality standards |" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "| 📝 Lint | ❌ Failed | Code quality issues found |" >> $GITHUB_STEP_SUMMARY
+          fi
+          
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
+          # Overall status
+          if [[ "$TEST_STATUS" == "success" && "$BUILD_STATUS" == "success" && "$SECURITY_STATUS" == "success" && "$LINT_STATUS" == "success" ]]; then
+            echo "## ✅ Overall Status: **PASSED**" >> $GITHUB_STEP_SUMMARY
+            echo "All checks completed successfully. Ready to merge!" >> $GITHUB_STEP_SUMMARY
+            exit 0
+          else
+            echo "## ❌ Overall Status: **FAILED**" >> $GITHUB_STEP_SUMMARY
+            echo "One or more checks failed. Please review the issues above." >> $GITHUB_STEP_SUMMARY
+            exit 1
+          fi
