update development setup and port configurations (#52)
* docs: update development setup and port configurations in contributing and README files

- Revised development environment instructions to clarify database setup and port usage.
- Updated port mappings for WebSocket, metrics, and database admin in both contributing and README documentation.
- Added multi-environment setup instructions to facilitate simultaneous runs of development, testing, and production environments.
- Removed outdated distributed Docker Compose example and production configuration files to streamline the project structure.
- Adjusted development YAML configuration to reflect new port settings for metrics and WebSocket connections.

* docs: update port configurations in contributing and PORT_MAPPING files

- Removed Database RPC ports from the contributing documentation for development and testing environments.
- Updated PORT_MAPPING.md to reflect the removal of Database RPC ports, clarifying the port usage for different environments.

* fix: correct indentation for restart policy in distributed Docker Compose configuration

- Adjusted the indentation for the `restart` policy under the service definition to ensure proper YAML formatting and functionality.

--- a/docker/compose/docker-compose.distributed.yml
+++ b/docker/compose/docker-compose.distributed.yml
@@ -28,7 +28,7 @@ services:
       timeout: 10s
       retries: 5
       start_period: 60s
-    restart: unless-stopped
+      restart: unless-stopped
     networks:
       - distributed_network
 
@@ -64,7 +64,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 30s
-    restart: unless-stopped
+      restart: unless-stopped
     network_mode: host
 
   # Caddy Reverse Proxy Node 1
@@ -90,7 +90,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
-    restart: unless-stopped
+      restart: unless-stopped
     networks:
       - distributed_network
 
@@ -106,8 +106,6 @@ networks:
   distributed_network:
     driver: bridge
 
----
-
 # Additional nodes would have similar configurations with:
 # - Different node IDs (node2, node3, etc.)
 # - Different hostnames and container names
@@ -117,7 +115,10 @@ networks:
 
 # Example for Node 2:
 # cockroachdb-node2:
-#   command: start --certs-dir=/cockroach/cockroach-certs --advertise-addr=node2.example.com:26257 --join=node1.example.com:26257,node2.example.com:26257,node3.example.com:26257
+#   image: cockroachdb/cockroach:v22.2.7
+#   container_name: cockroachdb-node2
+#   hostname: cockroachdb-node2
+#   command: start --certs-dir=/cockroach/cockroach-certs --advertise-addr=cockroachdb-node2:26257 --join=cockroachdb-node1:26257,cockroachdb-node2:26257,cockroachdb-node3:26257
 #   volumes:
 #     - cockroach_data_node2:/cockroach/cockroach-data
 
